--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,11 +15,14 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     magrittr,
+    rlang,
     readxl,
     dplyr,
     purrr,
     stats,
     tidyr,
     stringr,
-    lubridate
+    lubridate,
+    utils,
+    openxlsx
 RoxygenNote: 7.2.0
