--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(download_sea_operations_data)
 export(get_elmer_table)
+export(get_ev_registrations_city)
+export(get_ev_registrations_county)
 export(get_ofm_intercensal_population)
 export(get_ofm_postcensal_housing)
 export(get_ofm_postcensal_pop_change)
