ytd ev registrations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,8 @@
 
 export(download_sea_operations_data)
 export(get_elmer_table)
-export(get_ev_registration)
+export(get_ev_registration_monthly)
+export(get_ev_registration_ytd)
 export(get_ofm_intercensal_population)
 export(get_ofm_postcensal_housing)
 export(get_ofm_postcensal_pop_change)
@@ -14,3 +15,4 @@ export(process_sea_operations_data)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
+importFrom(tidyselect,all_of)
