--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(calculate_mpo_long_tt_share)
 export(calculate_mpo_nonsov_share)
+export(calculate_mpo_ownership_share)
 export(calculate_mpo_people_of_color)
 export(download_sea_operations_data)
 export(get_elmer_table)
