added jobs near hct

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(all_registrations)
 export(download_sea_operations_data)
 export(get_housing_data)
 export(get_population_data)
+export(jobs_near_hct)
 export(new_registrations)
 export(pop_hsg_near_hct)
 export(process_faa_data)
@@ -11,7 +12,9 @@ export(process_ntd_data)
 export(process_qcew_monthly_msa)
 export(process_sea_operations_data)
 export(process_vehicle_registration_data)
+export(processed_covered_employment)
 export(summarize_airport_data)
+export(summarize_jobs_data)
 export(vehicle_manufacturers)
 export(vehicle_registrations_tract)
 importFrom(rlang,.data)
