--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(get_population_data)
 export(jobs_near_hct)
 export(new_registrations)
 export(pop_hsg_near_hct)
+export(process_acs_data)
 export(process_faa_data)
 export(process_ntd_data)
 export(process_qcew_monthly_msa)
