added census summary function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(process_sea_operations_data)
 export(process_vehicle_registration_data)
 export(processed_covered_employment)
 export(summarize_airport_data)
+export(summarize_census_data)
 export(summarize_jobs_data)
 export(vehicle_manufacturers)
 export(vehicle_registrations_tract)
